--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     </header>
 
     <main>
+
+        <!-- teams section starts -->
+
         <section class="teams display-flex">
             <div class="team-image-container">
                 <img src="images/team1.png" alt="">
@@ -54,13 +57,67 @@
             </div>
 
             <div class="our-features">
-                <h3 class="feature-title"> <span id="quick-list" class="text-light-gay">Quick list</span> <span>of
+                <h3 class="section-title"> <span id="quick-list" class="text-light-gay">Quick list</span> <span>of
                         Our</span> <span class="text-primary">Features</span></h3>
-                <p class="feature-description text-light-gay">There are many variations of passages of Lorem Ipsum available, but the
+                <p class="feature-description text-light-gay">There are many variations of passages of Lorem Ipsum
+                    available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
+
+        </section>
+
+
+        <!-- features you will enjoy -->
+        <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="text-light-gay">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                    <!-- feature card container --> 
+                     
+        <div class="feature-card">
+            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+            <p class="text-light-gay">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+        <div class="feature-card">
+            <h4 class="feature-title">Drag & Drop Builder</h4>
+            <p class="text-light-gay">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+        <div class="feature-card">
+            <h4 class="feature-title">Awesome Modern Design</h4>
+            <p class="text-light-gay">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+        <div class="feature-card">
+            <h4 class="feature-title">Super Easy to Edit</h4>
+            <p class="text-light-gay">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+
+
+
+
+
+
+            </div>
+
+            <div class="featured-architect">
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+Year</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+
+        </section>
+
+        
+
+
+        <!-- some facts -->
+        <section class="some-facts">
 
         </section>
 
