--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             </div>
 
             <div class="our-features">
-                <h3 class="section-title"> <span id="quick-list" class="text-light-gay">Quick list</span> <span>of
+                <h3 class="section-title"> <span id="quick-list" class="text-light-gray">Quick list</span> <span>of
                         Our</span> <span class="text-primary">Features</span></h3>
-                <p class="feature-description text-light-gay">There are many variations of passages of Lorem Ipsum
+                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum
                     available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
@@ -73,27 +73,32 @@
         <section class="features display-flex">
             <div>
                 <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
-                <p class="text-light-gay">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even</p>
 
-                    <!-- feature card container --> 
-                     
-        <div class="feature-card">
-            <h4 class="feature-title">Dexktop & Mobile Version</h4>
-            <p class="text-light-gay">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-        </div>
-        <div class="feature-card">
-            <h4 class="feature-title">Drag & Drop Builder</h4>
-            <p class="text-light-gay">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-        </div>
-        <div class="feature-card">
-            <h4 class="feature-title">Awesome Modern Design</h4>
-            <p class="text-light-gay">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-        </div>
-        <div class="feature-card">
-            <h4 class="feature-title">Super Easy to Edit</h4>
-            <p class="text-light-gay">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-        </div>
+                <!-- feature card container -->
+
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Drag & Drop Builder</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Awesome Modern Design</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Super Easy to Edit</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
 
 
 
@@ -113,11 +118,47 @@
 
         </section>
 
-        
+
 
 
         <!-- some facts -->
         <section class="some-facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered
+                alteration.</p>
+            <div class="facts-container">
+                <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+
+            </div>
 
         </section>
 
