--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
         <!-- some facts -->
         <section class="some-facts">
             <h3 class="section-title">Some Facts</h3>
-            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority
+            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available,
+                but the majority
                 have suffered
                 alteration.</p>
             <div class="facts-container">
@@ -161,6 +162,25 @@
             </div>
 
         </section>
+
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but <br>
+                     the
+                    majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+
+        </section>
+
+
 
     </main>
 
