added footer and made it responsive for small devices

--- a/index.html
+++ b/index.html
@@ -184,7 +184,10 @@
 
     </main>
 
-    <footer>
+    <footer class="">
+        <div class="footer-container display-flex">
+        <h6 class="footer-title text-gray">All rights reserved copyright@2023 startup landing page design</h6>
+        </div>
 
     </footer>
 
